--- a/test_test.ipynb
+++ b/test_test.ipynb
@@ -2,7 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 132,
+   "id": "43200fd5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
    "id": "27a1fa29",
    "metadata": {},
    "outputs": [],
@@ -12,352 +23,132 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 134,
    "id": "b2b51f67",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/ivanbarin-turica/FBREF-Scraper/scores_and_fixtures.py:41: FutureWarning: errors='ignore' is deprecated and will raise in a future version. Use to_numeric without passing `errors` and catch exceptions explicitly instead\n",
-      "  df = df.apply(pd.to_numeric, errors='ignore')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "df = season_results_and_fixtures(\"eng\", 2020)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 231,
    "id": "c9ea434b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_home_lineup(comp, year, home_team, away_team):\n",
+    "    \n",
+    "    from scores_and_fixtures import season_results_and_fixtures\n",
+    "    from datetime import datetime\n",
+    "    import pandas as pd\n",
+    "    import requests\n",
+    "    from bs4 import BeautifulSoup\n",
+    "\n",
+    "    results_df = season_results_and_fixtures(comp, year)\n",
+    "    \n",
+    "    for i, row in results_df.iterrows():\n",
+    "        if row['home_team'].lower() == home_team.lower() and row['away_team'].lower() == away_team.lower():\n",
+    "            url = f\"https://fbref.com/{row['match_url']}\"\n",
+    "            resp = requests.get(url) \n",
+    "            resp.encoding = 'utf-8'\n",
+    "            soup = BeautifulSoup(resp.text.replace('<!--', '').replace('--!>', ''), 'html.parser')\n",
+    "            \n",
+    "            div_lineup_home = soup.find('div', {'class':'lineup'}, {'id':'a'})\n",
+    "            numbers, player_names = [], []\n",
+    "            \n",
+    "            statuses = ['starter'] * 11\n",
+    "            \n",
+    "            players = div_lineup_home.find_all('td')\n",
+    "                \n",
+    "            for i, value in enumerate(players):\n",
+    "                if i % 2 == 0:\n",
+    "                    numbers.append(value.get_text())\n",
+    "                elif i % 2 == 1: \n",
+    "                    player_names.append(value.get_text())\n",
+    "                    \n",
+    "            df = pd.DataFrame(list(zip(numbers, player_names)), columns = ['squad_number', 'player'])\n",
+    "            \n",
+    "            df['status'] = 'Bench'\n",
+    "            df.loc[:10, 'status'] = 'Starter'\n",
+    "            \n",
+    "            for i, row in df.iterrows():\n",
+    "                if row['status'] == 'Starter':\n",
+    "                    player_div = soup.find(\"div\", {\"title\":{row['player']}})\n",
+    "                    tip = player_div[\"tip\"]  \n",
+    "                    style = player_div[\"style\"]\n",
+    "                    if style == \"top: calc(50% - 18px); left: calc(5% - 8px);\":\n",
+    "                        print(\"GK\")\n",
+    "                    elif style == \"top: calc(16.6666666666667% - 18px); left: calc(15% - 8px);\":\n",
+    "                        print(\"LB\")\n",
+    "                    elif style == \"top: calc(33.3333333333333% - 18px); left: calc(15% - 8px);\":\n",
+    "                        print(\"LCB\")\n",
+    "                    elif style == \"top: calc(66.6666666666667% - 18px); left: calc(15% - 8px);\":\n",
+    "                        print(\"RCB\")\n",
+    "                    elif style == \"top: calc(83.3333333333333% - 18px); left: calc(15% - 8px);\":\n",
+    "                        print(\"RB\")\n",
+    "                    elif style == \"top: calc(16.6666666666667% - 18px); left: calc(30% - 8px);\":\n",
+    "                        print(\"LM\")\n",
+    "                    elif style == \"top: calc(33.3333333333333% - 18px); left: calc(30% - 8px);\":\n",
+    "                        print(\"LCM\")\n",
+    "                    elif style == \"top: calc(66.6666666666667% - 18px); left: calc(30% - 8px);\":\n",
+    "                        print(\"RCM\")\n",
+    "                    elif style == \"top: calc(83.3333333333333% - 18px); left: calc(30% - 8px);\":\n",
+    "                        print(\"RM\")\n",
+    "                    elif style == \"top: calc(25% - 18px); left: calc(45% - 8px);\":\n",
+    "                        print(\"LCF\")\n",
+    "                    elif style == \"top: calc(75% - 18px); left: calc(45% - 8px);\":\n",
+    "                        print(\"RCF\")\n",
+    "                        \n",
+    "            print(url)\n",
+    "\n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 232,
+   "id": "ca773979",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>gameweek</th>\n",
-       "      <th>dayofweek</th>\n",
-       "      <th>date</th>\n",
-       "      <th>start_time</th>\n",
-       "      <th>home_team</th>\n",
-       "      <th>home_xg</th>\n",
-       "      <th>home_score</th>\n",
-       "      <th>away_score</th>\n",
-       "      <th>away_xg</th>\n",
-       "      <th>away_team</th>\n",
-       "      <th>attendance</th>\n",
-       "      <th>venue</th>\n",
-       "      <th>referee</th>\n",
-       "      <th>match_report</th>\n",
-       "      <th>notes</th>\n",
-       "      <th>match_url</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>Sat</td>\n",
-       "      <td>2020-09-12</td>\n",
-       "      <td>12:30</td>\n",
-       "      <td>Fulham</td>\n",
-       "      <td>0.1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1.9</td>\n",
-       "      <td>Arsenal</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Craven Cottage</td>\n",
-       "      <td>Chris Kavanagh</td>\n",
-       "      <td>Match Report</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>/en/matches/bf52349b/Fulham-Arsenal-September-...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>Sat</td>\n",
-       "      <td>2020-09-12</td>\n",
-       "      <td>15:00</td>\n",
-       "      <td>Crystal Palace</td>\n",
-       "      <td>1.1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.9</td>\n",
-       "      <td>Southampton</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Selhurst Park</td>\n",
-       "      <td>Jonathan Moss</td>\n",
-       "      <td>Match Report</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>/en/matches/db261cb0/Crystal-Palace-Southampto...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>Sat</td>\n",
-       "      <td>2020-09-12</td>\n",
-       "      <td>17:30</td>\n",
-       "      <td>Liverpool</td>\n",
-       "      <td>2.7</td>\n",
-       "      <td>4</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0.3</td>\n",
-       "      <td>Leeds United</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Anfield</td>\n",
-       "      <td>Michael Oliver</td>\n",
-       "      <td>Match Report</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>/en/matches/21b58926/Liverpool-Leeds-United-Se...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>Sat</td>\n",
-       "      <td>2020-09-12</td>\n",
-       "      <td>20:00</td>\n",
-       "      <td>West Ham</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1.6</td>\n",
-       "      <td>Newcastle Utd</td>\n",
-       "      <td>0</td>\n",
-       "      <td>London Stadium</td>\n",
-       "      <td>Stuart Attwell</td>\n",
-       "      <td>Match Report</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>/en/matches/78495ced/West-Ham-United-Newcastle...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>Sun</td>\n",
-       "      <td>2020-09-13</td>\n",
-       "      <td>14:00</td>\n",
-       "      <td>West Brom</td>\n",
-       "      <td>0.4</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2.8</td>\n",
-       "      <td>Leicester City</td>\n",
-       "      <td>0</td>\n",
-       "      <td>The Hawthorns</td>\n",
-       "      <td>Anthony Taylor</td>\n",
-       "      <td>Match Report</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>/en/matches/7dd01ca9/West-Bromwich-Albion-Leic...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>375</th>\n",
-       "      <td>38.0</td>\n",
-       "      <td>Sun</td>\n",
-       "      <td>2021-05-23</td>\n",
-       "      <td>16:00</td>\n",
-       "      <td>West Ham</td>\n",
-       "      <td>1.3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1.5</td>\n",
-       "      <td>Southampton</td>\n",
-       "      <td>10000</td>\n",
-       "      <td>London Stadium</td>\n",
-       "      <td>Martin Atkinson</td>\n",
-       "      <td>Match Report</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>/en/matches/50ec33b2/West-Ham-United-Southampt...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>376</th>\n",
-       "      <td>38.0</td>\n",
-       "      <td>Sun</td>\n",
-       "      <td>2021-05-23</td>\n",
-       "      <td>16:00</td>\n",
-       "      <td>Leeds United</td>\n",
-       "      <td>2.3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>West Brom</td>\n",
-       "      <td>8000</td>\n",
-       "      <td>Elland Road</td>\n",
-       "      <td>David Coote</td>\n",
-       "      <td>Match Report</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>/en/matches/9ade2b5d/Leeds-United-West-Bromwic...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>377</th>\n",
-       "      <td>38.0</td>\n",
-       "      <td>Sun</td>\n",
-       "      <td>2021-05-23</td>\n",
-       "      <td>16:00</td>\n",
-       "      <td>Arsenal</td>\n",
-       "      <td>0.8</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>Brighton</td>\n",
-       "      <td>10000</td>\n",
-       "      <td>Emirates Stadium</td>\n",
-       "      <td>Jonathan Moss</td>\n",
-       "      <td>Match Report</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>/en/matches/9f6c52f8/Arsenal-Brighton-and-Hove...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>378</th>\n",
-       "      <td>38.0</td>\n",
-       "      <td>Sun</td>\n",
-       "      <td>2021-05-23</td>\n",
-       "      <td>16:00</td>\n",
-       "      <td>Liverpool</td>\n",
-       "      <td>1.6</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.6</td>\n",
-       "      <td>Crystal Palace</td>\n",
-       "      <td>9901</td>\n",
-       "      <td>Anfield</td>\n",
-       "      <td>Craig Pawson</td>\n",
-       "      <td>Match Report</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>/en/matches/c2fc07f0/Liverpool-Crystal-Palace-...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>379</th>\n",
-       "      <td>38.0</td>\n",
-       "      <td>Sun</td>\n",
-       "      <td>2021-05-23</td>\n",
-       "      <td>16:00</td>\n",
-       "      <td>Fulham</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1.3</td>\n",
-       "      <td>Newcastle Utd</td>\n",
-       "      <td>2000</td>\n",
-       "      <td>Craven Cottage</td>\n",
-       "      <td>Chris Kavanagh</td>\n",
-       "      <td>Match Report</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>/en/matches/f966eee0/Fulham-Newcastle-United-M...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>380 rows × 16 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     gameweek dayofweek       date start_time       home_team  home_xg  \\\n",
-       "0         1.0       Sat 2020-09-12     12:30           Fulham      0.1   \n",
-       "1         1.0       Sat 2020-09-12     15:00   Crystal Palace      1.1   \n",
-       "2         1.0       Sat 2020-09-12     17:30        Liverpool      2.7   \n",
-       "3         1.0       Sat 2020-09-12     20:00         West Ham      1.0   \n",
-       "4         1.0       Sun 2020-09-13     14:00        West Brom      0.4   \n",
-       "..        ...       ...        ...        ...             ...      ...   \n",
-       "375      38.0       Sun 2021-05-23     16:00         West Ham      1.3   \n",
-       "376      38.0       Sun 2021-05-23     16:00     Leeds United      2.3   \n",
-       "377      38.0       Sun 2021-05-23     16:00          Arsenal      0.8   \n",
-       "378      38.0       Sun 2021-05-23     16:00        Liverpool      1.6   \n",
-       "379      38.0       Sun 2021-05-23     16:00           Fulham      1.0   \n",
-       "\n",
-       "     home_score  away_score  away_xg       away_team  attendance  \\\n",
-       "0             0           3      1.9         Arsenal           0   \n",
-       "1             1           0      0.9     Southampton           0   \n",
-       "2             4           3      0.3    Leeds United           0   \n",
-       "3             0           2      1.6   Newcastle Utd           0   \n",
-       "4             0           3      2.8  Leicester City           0   \n",
-       "..          ...         ...      ...             ...         ...   \n",
-       "375           3           0      1.5     Southampton       10000   \n",
-       "376           3           1      1.0       West Brom        8000   \n",
-       "377           2           0      0.2        Brighton       10000   \n",
-       "378           2           0      0.6  Crystal Palace        9901   \n",
-       "379           0           2      1.3   Newcastle Utd        2000   \n",
-       "\n",
-       "                venue          referee  match_report  notes  \\\n",
-       "0      Craven Cottage   Chris Kavanagh  Match Report    NaN   \n",
-       "1       Selhurst Park    Jonathan Moss  Match Report    NaN   \n",
-       "2             Anfield   Michael Oliver  Match Report    NaN   \n",
-       "3      London Stadium   Stuart Attwell  Match Report    NaN   \n",
-       "4       The Hawthorns   Anthony Taylor  Match Report    NaN   \n",
-       "..                ...              ...           ...    ...   \n",
-       "375    London Stadium  Martin Atkinson  Match Report    NaN   \n",
-       "376       Elland Road      David Coote  Match Report    NaN   \n",
-       "377  Emirates Stadium    Jonathan Moss  Match Report    NaN   \n",
-       "378           Anfield     Craig Pawson  Match Report    NaN   \n",
-       "379    Craven Cottage   Chris Kavanagh  Match Report    NaN   \n",
-       "\n",
-       "                                             match_url  \n",
-       "0    /en/matches/bf52349b/Fulham-Arsenal-September-...  \n",
-       "1    /en/matches/db261cb0/Crystal-Palace-Southampto...  \n",
-       "2    /en/matches/21b58926/Liverpool-Leeds-United-Se...  \n",
-       "3    /en/matches/78495ced/West-Ham-United-Newcastle...  \n",
-       "4    /en/matches/7dd01ca9/West-Bromwich-Albion-Leic...  \n",
-       "..                                                 ...  \n",
-       "375  /en/matches/50ec33b2/West-Ham-United-Southampt...  \n",
-       "376  /en/matches/9ade2b5d/Leeds-United-West-Bromwic...  \n",
-       "377  /en/matches/9f6c52f8/Arsenal-Brighton-and-Hove...  \n",
-       "378  /en/matches/c2fc07f0/Liverpool-Crystal-Palace-...  \n",
-       "379  /en/matches/f966eee0/Fulham-Newcastle-United-M...  \n",
-       "\n",
-       "[380 rows x 16 columns]"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "GK\n",
+      "RB\n",
+      "LB\n",
+      "LCM\n",
+      "RCB\n",
+      "LCB\n",
+      "RM\n",
+      "RCF\n",
+      "LM\n",
+      "RCM\n",
+      "LCF\n",
+      "https://fbref.com//en/matches/4eb36e37/Burnley-Brighton-and-Hove-Albion-August-14-2021-Premier-League\n"
+     ]
     }
    ],
    "source": [
-    "df"
+    "df = get_home_lineup(\"eng\", 2021, \"Burnley\", \"Brighton\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "080c9888",
+   "id": "3b5e90f7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "<div title=\"Jay Rodriguez\" tip=\"<img style='height:100px;width:100px;' src='https://fbref.com/req/202302030/images/headshots/4ab53cdb_2022.jpg'><br><strong>Jay Rodriguez</strong>\" class=\"poptip a\" style=\"top: calc(25% - 18px); left: calc(45% - 8px);\">19</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0ff84b9a",
    "metadata": {},
    "outputs": [],
    "source": []
