--- a/test_test.ipynb
+++ b/test_test.ipynb
@@ -2,39 +2,106 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 39,
    "id": "43200fd5",
    "metadata": {},
    "outputs": [],
    "source": [
     "import warnings\n",
-    "warnings.filterwarnings('ignore')"
+    "warnings.filterwarnings('ignore')\n",
+    "\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "import time\n",
+    "\n",
+    "import requests\n",
+    "from bs4 import BeautifulSoup"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
-   "id": "27a1fa29",
+   "execution_count": 69,
+   "id": "85a0e6e1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from scores_and_fixtures import season_results_and_fixtures"
+    "def get_basic_position(style):\n",
+    "\n",
+    "    splitted = style.split('(')\n",
+    "    width = float(splitted[2].split('%')[0])\n",
+    "    height = float(splitted[1].split('%')[0])\n",
+    "    \n",
+    "    group = \"\"\n",
+    "    \n",
+    "    if width < 10:\n",
+    "        group = \"GK\"\n",
+    "    elif width < 20:\n",
+    "        group = \"DF\"\n",
+    "    elif width < 40:\n",
+    "        group = \"MF\"\n",
+    "    else:\n",
+    "        group = \"FW\"\n",
+    "  \n",
+    "    return group"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
-   "id": "b2b51f67",
+   "execution_count": 85,
+   "id": "a617fb78",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = season_results_and_fixtures(\"eng\", 2020)"
+    "def get_detailed_position(style, gk, df, mf, fw):\n",
+    "    \n",
+    "    splitted = style.split('(')\n",
+    "    width = float(splitted[2].split('%')[0])\n",
+    "    height = float(splitted[1].split('%')[0])\n",
+    "    \n",
+    "    right_position = \"\"\n",
+    "    \n",
+    "    if width < 10:\n",
+    "        position = \"GK\"\n",
+    "    elif width < 20:\n",
+    "        if df > 3:\n",
+    "            if height < 20 or height > 80:\n",
+    "                position = \"WB\"\n",
+    "            else:\n",
+    "                position = \"CB\"\n",
+    "        else:\n",
+    "            position = \"CB\"\n",
+    "    elif width == 25:\n",
+    "        if height < 20 or height > 80:\n",
+    "            position = \"WB\"\n",
+    "        else:\n",
+    "            position = \"DM\"\n",
+    "    elif width == 30:\n",
+    "        if mf == 3:\n",
+    "            position = \"CM\"\n",
+    "        else:\n",
+    "            if height < 20 or height > 80:\n",
+    "                position = \"WM\"\n",
+    "            else:\n",
+    "                position = \"CM\"\n",
+    "    elif width == 35:\n",
+    "        if height == 50:\n",
+    "            position = \"AM\"\n",
+    "        else:\n",
+    "            position = \"WF\"\n",
+    "    else:\n",
+    "        if height < 20 or height > 80:\n",
+    "            position = \"WF\"\n",
+    "        else:\n",
+    "            position = \"ST\"\n",
+    "    \n",
+    "    return position"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
-   "id": "c9ea434b",
+   "execution_count": 97,
+   "id": "a7f3d0a4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,9 +123,7 @@
     "            soup = BeautifulSoup(resp.text.replace('<!--', '').replace('--!>', ''), 'html.parser')\n",
     "            \n",
     "            div_lineup_home = soup.find('div', {'class':'lineup'}, {'id':'a'})\n",
-    "            numbers, player_names = [], []\n",
-    "            \n",
-    "            statuses = ['starter'] * 11\n",
+    "            numbers, player_names, positions = [], [], []\n",
     "            \n",
     "            players = div_lineup_home.find_all('td')\n",
     "                \n",
@@ -70,85 +135,256 @@
     "                    \n",
     "            df = pd.DataFrame(list(zip(numbers, player_names)), columns = ['squad_number', 'player'])\n",
     "            \n",
-    "            df['status'] = 'Bench'\n",
-    "            df.loc[:10, 'status'] = 'Starter'\n",
+    "            positions = []\n",
     "            \n",
     "            for i, row in df.iterrows():\n",
-    "                if row['status'] == 'Starter':\n",
+    "                try:\n",
     "                    player_div = soup.find(\"div\", {\"title\":{row['player']}})\n",
-    "                    tip = player_div[\"tip\"]  \n",
     "                    style = player_div[\"style\"]\n",
-    "                    if style == \"top: calc(50% - 18px); left: calc(5% - 8px);\":\n",
-    "                        print(\"GK\")\n",
-    "                    elif style == \"top: calc(16.6666666666667% - 18px); left: calc(15% - 8px);\":\n",
-    "                        print(\"LB\")\n",
-    "                    elif style == \"top: calc(33.3333333333333% - 18px); left: calc(15% - 8px);\":\n",
-    "                        print(\"LCB\")\n",
-    "                    elif style == \"top: calc(66.6666666666667% - 18px); left: calc(15% - 8px);\":\n",
-    "                        print(\"RCB\")\n",
-    "                    elif style == \"top: calc(83.3333333333333% - 18px); left: calc(15% - 8px);\":\n",
-    "                        print(\"RB\")\n",
-    "                    elif style == \"top: calc(16.6666666666667% - 18px); left: calc(30% - 8px);\":\n",
-    "                        print(\"LM\")\n",
-    "                    elif style == \"top: calc(33.3333333333333% - 18px); left: calc(30% - 8px);\":\n",
-    "                        print(\"LCM\")\n",
-    "                    elif style == \"top: calc(66.6666666666667% - 18px); left: calc(30% - 8px);\":\n",
-    "                        print(\"RCM\")\n",
-    "                    elif style == \"top: calc(83.3333333333333% - 18px); left: calc(30% - 8px);\":\n",
-    "                        print(\"RM\")\n",
-    "                    elif style == \"top: calc(25% - 18px); left: calc(45% - 8px);\":\n",
-    "                        print(\"LCF\")\n",
-    "                    elif style == \"top: calc(75% - 18px); left: calc(45% - 8px);\":\n",
-    "                        print(\"RCF\")\n",
-    "                        \n",
-    "            print(url)\n",
+    "                    get_position = get_basic_position(style)\n",
+    "                    df.at[i, 'position'] = get_position\n",
+    "                    positions.append(get_position)\n",
+    "                except: pass\n",
+    "                \n",
+    "            keepers = positions.count(\"GK\")\n",
+    "            defenders = positions.count(\"DF\")\n",
+    "            midfielders = positions.count(\"MF\")\n",
+    "            forwards = positions.count(\"FW\")\n",
+    "                \n",
+    "            for i, row in df.iterrows():\n",
+    "                try:\n",
+    "                    player_div = soup.find(\"div\", {\"title\":{row['player']}})\n",
+    "                    style = player_div[\"style\"]\n",
+    "                    get_det_position = get_detailed_position(style, keepers, defenders, midfielders, forwards)\n",
+    "                    df.at[i, 'det_pos'] = get_det_position\n",
+    "                except: pass\n",
     "\n",
     "    return df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
-   "id": "ca773979",
+   "execution_count": 98,
+   "id": "5ad168ab",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "GK\n",
-      "RB\n",
-      "LB\n",
-      "LCM\n",
-      "RCB\n",
-      "LCB\n",
-      "RM\n",
-      "RCF\n",
-      "LM\n",
-      "RCM\n",
-      "LCF\n",
-      "https://fbref.com//en/matches/4eb36e37/Burnley-Brighton-and-Hove-Albion-August-14-2021-Premier-League\n"
+      "/Users/ivanbarin-turica/FBREF-Scraper/scores_and_fixtures.py:41: FutureWarning: errors='ignore' is deprecated and will raise in a future version. Use to_numeric without passing `errors` and catch exceptions explicitly instead\n",
+      "  df = df.apply(pd.to_numeric, errors='ignore')\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>squad_number</th>\n",
+       "      <th>player</th>\n",
+       "      <th>position</th>\n",
+       "      <th>det_pos</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>22</td>\n",
+       "      <td>David Raya</td>\n",
+       "      <td>GK</td>\n",
+       "      <td>GK</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>William Saliba</td>\n",
+       "      <td>DF</td>\n",
+       "      <td>CB</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Ben White</td>\n",
+       "      <td>DF</td>\n",
+       "      <td>WB</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>6</td>\n",
+       "      <td>Gabriel Magalhães</td>\n",
+       "      <td>DF</td>\n",
+       "      <td>CB</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>7</td>\n",
+       "      <td>Bukayo Saka</td>\n",
+       "      <td>FW</td>\n",
+       "      <td>WF</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>8</td>\n",
+       "      <td>Martin Ødegaard</td>\n",
+       "      <td>MF</td>\n",
+       "      <td>CM</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>11</td>\n",
+       "      <td>Gabriel Martinelli</td>\n",
+       "      <td>FW</td>\n",
+       "      <td>WF</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>20</td>\n",
+       "      <td>Jorginho</td>\n",
+       "      <td>MF</td>\n",
+       "      <td>CM</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>29</td>\n",
+       "      <td>Kai Havertz</td>\n",
+       "      <td>FW</td>\n",
+       "      <td>ST</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>35</td>\n",
+       "      <td>Oleksandr Zinchenko</td>\n",
+       "      <td>DF</td>\n",
+       "      <td>WB</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>41</td>\n",
+       "      <td>Declan Rice</td>\n",
+       "      <td>MF</td>\n",
+       "      <td>CM</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Aaron Ramsdale</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>10</td>\n",
+       "      <td>Emile Smith Rowe</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>14</td>\n",
+       "      <td>Eddie Nketiah</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>15</td>\n",
+       "      <td>Jakub Kiwior</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>17</td>\n",
+       "      <td>Cédric Soares</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>19</td>\n",
+       "      <td>Leandro Trossard</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>24</td>\n",
+       "      <td>Reiss Nelson</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>25</td>\n",
+       "      <td>Mohamed Elneny</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>76</td>\n",
+       "      <td>Reuell Walters</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   squad_number               player position det_pos\n",
+       "0            22           David Raya       GK      GK\n",
+       "1             2       William Saliba       DF      CB\n",
+       "2             4            Ben White       DF      WB\n",
+       "3             6    Gabriel Magalhães       DF      CB\n",
+       "4             7          Bukayo Saka       FW      WF\n",
+       "5             8      Martin Ødegaard       MF      CM\n",
+       "6            11   Gabriel Martinelli       FW      WF\n",
+       "7            20             Jorginho       MF      CM\n",
+       "8            29          Kai Havertz       FW      ST\n",
+       "9            35  Oleksandr Zinchenko       DF      WB\n",
+       "10           41          Declan Rice       MF      CM\n",
+       "11            1       Aaron Ramsdale      NaN     NaN\n",
+       "12           10     Emile Smith Rowe      NaN     NaN\n",
+       "13           14        Eddie Nketiah      NaN     NaN\n",
+       "14           15         Jakub Kiwior      NaN     NaN\n",
+       "15           17        Cédric Soares      NaN     NaN\n",
+       "16           19     Leandro Trossard      NaN     NaN\n",
+       "17           24         Reiss Nelson      NaN     NaN\n",
+       "18           25       Mohamed Elneny      NaN     NaN\n",
+       "19           76       Reuell Walters      NaN     NaN"
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = get_home_lineup(\"eng\", 2021, \"Burnley\", \"Brighton\")"
+    "get_home_lineup(\"eng\", 2023, \"Arsenal\", \"Liverpool\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3b5e90f7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "<div title=\"Jay Rodriguez\" tip=\"<img style='height:100px;width:100px;' src='https://fbref.com/req/202302030/images/headshots/4ab53cdb_2022.jpg'><br><strong>Jay Rodriguez</strong>\" class=\"poptip a\" style=\"top: calc(25% - 18px); left: calc(45% - 8px);\">19</div>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0ff84b9a",
+   "id": "d75f95c8",
    "metadata": {},
    "outputs": [],
    "source": []
