--- a/goals_points_correlation.ipynb
+++ b/goals_points_correlation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 402,
+   "execution_count": 2,
    "id": "f194ccb4",
    "metadata": {},
    "outputs": [],
@@ -25,17 +25,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 403,
+   "execution_count": 3,
    "id": "357c7a32",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from player_stats import player_stats"
+    "from internal_packages import player_stats"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 410,
+   "execution_count": 4,
    "id": "bbc85aa9",
    "metadata": {},
    "outputs": [],
@@ -53,9 +53,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 411,
+   "execution_count": 5,
    "id": "aa9f1347",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -89,9 +91,9 @@
     "df = pd.DataFrame()\n",
     "\n",
     "for i in range(2020, 2022):\n",
-    "    stats = player_stats(\"eng\", i, \"stats\")\n",
+    "    stats = player_stats.player_stats(\"eng\", i, \"stats\")\n",
     "    stats = stats.set_index('player_id')\n",
-    "    playing_time = player_stats(\"eng\", i, \"playingtime\")\n",
+    "    playing_time = player_stats.player_stats(\"eng\", i, \"playingtime\")\n",
     "    playing_time = playing_time.loc[playing_time['games'] > 0]\n",
     "    playing_time = playing_time.set_index('player_id')\n",
     "\n",
@@ -121,392 +123,6 @@
     "df = df[['player_id', 'player', 'position', 'season', 'team', 'minutes_90s', 'points_per_game', 'ga90', 'xga90', 'gc90']]\n",
     "\n",
     "df = df.dropna()\n",
-    "\n",
-    "for pos in positions:\n",
-    "\n",
-    "    pos_df = df.loc[df['position'] == pos]\n",
-    "    pos_df = pos_df.select_dtypes(include=['number'])\n",
-    "\n",
-    "    if len(pos_df) >= 10:\n",
-    "\n",
-    "        print(pos)\n",
-    "\n",
-    "        corr_matrix = pos_df.corr()\n",
-    "        corr_matrix = corr_matrix.loc['points_per_game']\n",
-    "        print(corr_matrix)\n",
-    "\n",
-    "    else: pass"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b511bb21",
-   "metadata": {},
-   "source": [
-    "## SPAIN"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 412,
-   "id": "fcc3d113",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "FW\n",
-      "minutes_90s        0.085392\n",
-      "points_per_game    1.000000\n",
-      "ga90               0.480974\n",
-      "xga90              0.463090\n",
-      "gc90               0.390341\n",
-      "Name: points_per_game, dtype: float64\n",
-      "MF\n",
-      "minutes_90s        0.148977\n",
-      "points_per_game    1.000000\n",
-      "ga90               0.148617\n",
-      "xga90              0.105819\n",
-      "gc90               0.075752\n",
-      "Name: points_per_game, dtype: float64\n",
-      "DF\n",
-      "minutes_90s       -0.004238\n",
-      "points_per_game    1.000000\n",
-      "ga90               0.321403\n",
-      "xga90              0.291135\n",
-      "gc90               0.262391\n",
-      "Name: points_per_game, dtype: float64\n"
-     ]
-    }
-   ],
-   "source": [
-    "df = pd.DataFrame()\n",
-    "\n",
-    "for i in range(2020, 2022):\n",
-    "    stats = player_stats(\"esp\", i, \"stats\")\n",
-    "    stats = stats.set_index('player_id')\n",
-    "    playing_time = player_stats(\"esp\", i, \"playingtime\")\n",
-    "    playing_time = playing_time.loc[playing_time['games'] > 0]\n",
-    "    playing_time = playing_time.set_index('player_id')\n",
-    "\n",
-    "    new_df = pd.concat([stats, playing_time], axis = 1)\n",
-    "\n",
-    "    new_df['season'] = f\"{str(i)}-{str(i+1)}\"\n",
-    "\n",
-    "    df = pd.concat([df, new_df])\n",
-    "\n",
-    "df = df.loc[:,~df.columns.duplicated()]\n",
-    "df = df.reset_index()\n",
-    "df = df.loc[df['minutes_90s'] > 10]\n",
-    "df['position'] = df['position'].str[:2]\n",
-    "\n",
-    "df['gls_value'] = round(df['goals'] * (1 + (df['goals'] / df['xg'])), 3)\n",
-    "df['gls_contributed'] = df['gls_value'] + df['xg_assist']\n",
-    "\n",
-    "df['gls_ast'] = df['goals'] + df['assists']\n",
-    "df['expected'] = df['xg'] + df['xg_assist']\n",
-    "\n",
-    "df['ga90'] = round(df['gls_ast'] / df['minutes_90s'], 2)\n",
-    "df['xga90'] = round(df['expected'] / df['minutes_90s'], 2)\n",
-    "df['gc90'] = round(df['gls_contributed'] / df['minutes_90s'], 2)\n",
-    "\n",
-    "df = df.sort_values(by = 'gls_contributed', ascending = False)\n",
-    "\n",
-    "df = df[['player_id', 'player', 'position', 'season', 'team', 'minutes_90s', 'points_per_game', 'ga90', 'xga90', 'gc90']]\n",
-    "\n",
-    "df = df.dropna()\n",
-    "\n",
-    "for pos in positions:\n",
-    "\n",
-    "    pos_df = df.loc[df['position'] == pos]\n",
-    "    pos_df = pos_df.select_dtypes(include=['number'])\n",
-    "\n",
-    "    if len(pos_df) >= 10:\n",
-    "\n",
-    "        print(pos)\n",
-    "\n",
-    "        corr_matrix = pos_df.corr()\n",
-    "        corr_matrix = corr_matrix.loc['points_per_game']\n",
-    "        print(corr_matrix)\n",
-    "\n",
-    "    else: pass"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "afc6e53c",
-   "metadata": {},
-   "source": [
-    "## ITALY"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 413,
-   "id": "e10750b9",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "FW\n",
-      "minutes_90s        0.059403\n",
-      "points_per_game    1.000000\n",
-      "ga90               0.538003\n",
-      "xga90              0.496221\n",
-      "gc90               0.419972\n",
-      "Name: points_per_game, dtype: float64\n",
-      "MF\n",
-      "minutes_90s        0.064404\n",
-      "points_per_game    1.000000\n",
-      "ga90               0.288416\n",
-      "xga90              0.240155\n",
-      "gc90               0.304941\n",
-      "Name: points_per_game, dtype: float64\n",
-      "DF\n",
-      "minutes_90s        0.157335\n",
-      "points_per_game    1.000000\n",
-      "ga90               0.246118\n",
-      "xga90              0.265569\n",
-      "gc90               0.162888\n",
-      "Name: points_per_game, dtype: float64\n"
-     ]
-    }
-   ],
-   "source": [
-    "df = pd.DataFrame()\n",
-    "\n",
-    "for i in range(2020, 2022):\n",
-    "    stats = player_stats(\"ita\", i, \"stats\")\n",
-    "    stats = stats.set_index('player_id')\n",
-    "    playing_time = player_stats(\"ita\", i, \"playingtime\")\n",
-    "    playing_time = playing_time.loc[playing_time['games'] > 0]\n",
-    "    playing_time = playing_time.set_index('player_id')\n",
-    "\n",
-    "    new_df = pd.concat([stats, playing_time], axis = 1)\n",
-    "\n",
-    "    new_df['season'] = f\"{str(i)}-{str(i+1)}\"\n",
-    "\n",
-    "    df = pd.concat([df, new_df])\n",
-    "\n",
-    "df = df.loc[:,~df.columns.duplicated()]\n",
-    "df = df.reset_index()\n",
-    "df = df.loc[df['minutes_90s'] > 10]\n",
-    "df['position'] = df['position'].str[:2]\n",
-    "\n",
-    "df['gls_value'] = round(df['goals'] * (1 + (df['goals'] / df['xg'])), 3)\n",
-    "df['gls_contributed'] = df['gls_value'] + df['xg_assist']\n",
-    "\n",
-    "df['gls_ast'] = df['goals'] + df['assists']\n",
-    "df['expected'] = df['xg'] + df['xg_assist']\n",
-    "\n",
-    "df['ga90'] = round(df['gls_ast'] / df['minutes_90s'], 2)\n",
-    "df['xga90'] = round(df['expected'] / df['minutes_90s'], 2)\n",
-    "df['gc90'] = round(df['gls_contributed'] / df['minutes_90s'], 2)\n",
-    "\n",
-    "df = df.sort_values(by = 'gls_contributed', ascending = False)\n",
-    "\n",
-    "df = df[['player_id', 'player', 'position', 'season', 'team', 'minutes_90s', 'points_per_game', 'ga90', 'xga90', 'gc90']]\n",
-    "\n",
-    "df = df.dropna()\n",
-    "    \n",
-    "positions = df['position'].unique().tolist()\n",
-    "\n",
-    "for pos in positions:\n",
-    "\n",
-    "    pos_df = df.loc[df['position'] == pos]\n",
-    "    pos_df = pos_df.select_dtypes(include=['number'])\n",
-    "\n",
-    "    if len(pos_df) >= 10:\n",
-    "\n",
-    "        print(pos)\n",
-    "\n",
-    "        corr_matrix = pos_df.corr()\n",
-    "        corr_matrix = corr_matrix.loc['points_per_game']\n",
-    "        print(corr_matrix)\n",
-    "\n",
-    "    else: pass"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f4e793ed",
-   "metadata": {},
-   "source": [
-    "## FRANCE"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 414,
-   "id": "17e286c1",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "FW\n",
-      "minutes_90s        0.132967\n",
-      "points_per_game    1.000000\n",
-      "ga90               0.629798\n",
-      "xga90              0.632812\n",
-      "gc90               0.540039\n",
-      "Name: points_per_game, dtype: float64\n",
-      "MF\n",
-      "minutes_90s        0.039490\n",
-      "points_per_game    1.000000\n",
-      "ga90               0.258093\n",
-      "xga90              0.172457\n",
-      "gc90               0.263489\n",
-      "Name: points_per_game, dtype: float64\n",
-      "DF\n",
-      "minutes_90s        0.108475\n",
-      "points_per_game    1.000000\n",
-      "ga90               0.135895\n",
-      "xga90              0.169547\n",
-      "gc90               0.008982\n",
-      "Name: points_per_game, dtype: float64\n"
-     ]
-    }
-   ],
-   "source": [
-    "df = pd.DataFrame()\n",
-    "\n",
-    "for i in range(2020, 2022):\n",
-    "    stats = player_stats(\"fra\", i, \"stats\")\n",
-    "    stats = stats.set_index('player_id')\n",
-    "    playing_time = player_stats(\"fra\", i, \"playingtime\")\n",
-    "    playing_time = playing_time.loc[playing_time['games'] > 0]\n",
-    "    playing_time = playing_time.set_index('player_id')\n",
-    "\n",
-    "    new_df = pd.concat([stats, playing_time], axis = 1)\n",
-    "\n",
-    "    new_df['season'] = f\"{str(i)}-{str(i+1)}\"\n",
-    "\n",
-    "    df = pd.concat([df, new_df])\n",
-    "\n",
-    "df = df.loc[:,~df.columns.duplicated()]\n",
-    "df = df.reset_index()\n",
-    "df = df.loc[df['minutes_90s'] > 10]\n",
-    "df['position'] = df['position'].str[:2]\n",
-    "\n",
-    "df['gls_value'] = round(df['goals'] * (1 + (df['goals'] / df['xg'])), 3)\n",
-    "df['gls_contributed'] = df['gls_value'] + df['xg_assist']\n",
-    "\n",
-    "df['gls_ast'] = df['goals'] + df['assists']\n",
-    "df['expected'] = df['xg'] + df['xg_assist']\n",
-    "\n",
-    "df['ga90'] = round(df['gls_ast'] / df['minutes_90s'], 2)\n",
-    "df['xga90'] = round(df['expected'] / df['minutes_90s'], 2)\n",
-    "df['gc90'] = round(df['gls_contributed'] / df['minutes_90s'], 2)\n",
-    "\n",
-    "df = df.sort_values(by = 'gls_contributed', ascending = False)\n",
-    "\n",
-    "df = df[['player_id', 'player', 'position', 'season', 'team', 'minutes_90s', 'points_per_game', 'ga90', 'xga90', 'gc90']]\n",
-    "\n",
-    "df = df.dropna()\n",
-    "    \n",
-    "positions = df['position'].unique().tolist()\n",
-    "\n",
-    "for pos in positions:\n",
-    "\n",
-    "    pos_df = df.loc[df['position'] == pos]\n",
-    "    pos_df = pos_df.select_dtypes(include=['number'])\n",
-    "\n",
-    "    if len(pos_df) >= 10:\n",
-    "\n",
-    "        print(pos)\n",
-    "\n",
-    "        corr_matrix = pos_df.corr()\n",
-    "        corr_matrix = corr_matrix.loc['points_per_game']\n",
-    "        print(corr_matrix)\n",
-    "\n",
-    "    else: pass"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "62e8797d",
-   "metadata": {},
-   "source": [
-    "## GERMANY"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 415,
-   "id": "286502eb",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "FW\n",
-      "minutes_90s        0.303589\n",
-      "points_per_game    1.000000\n",
-      "ga90               0.530190\n",
-      "xga90              0.497169\n",
-      "gc90               0.479457\n",
-      "Name: points_per_game, dtype: float64\n",
-      "MF\n",
-      "minutes_90s        0.031287\n",
-      "points_per_game    1.000000\n",
-      "ga90               0.390906\n",
-      "xga90              0.314273\n",
-      "gc90               0.282198\n",
-      "Name: points_per_game, dtype: float64\n",
-      "DF\n",
-      "minutes_90s        0.036357\n",
-      "points_per_game    1.000000\n",
-      "ga90               0.259539\n",
-      "xga90              0.233191\n",
-      "gc90               0.132328\n",
-      "Name: points_per_game, dtype: float64\n"
-     ]
-    }
-   ],
-   "source": [
-    "df = pd.DataFrame()\n",
-    "\n",
-    "for i in range(2020, 2022):\n",
-    "    stats = player_stats(\"ger\", i, \"stats\")\n",
-    "    stats = stats.set_index('player_id')\n",
-    "    playing_time = player_stats(\"ger\", i, \"playingtime\")\n",
-    "    playing_time = playing_time.loc[playing_time['games'] > 0]\n",
-    "    playing_time = playing_time.set_index('player_id')\n",
-    "\n",
-    "    new_df = pd.concat([stats, playing_time], axis = 1)\n",
-    "\n",
-    "    new_df['season'] = f\"{str(i)}-{str(i+1)}\"\n",
-    "\n",
-    "    df = pd.concat([df, new_df])\n",
-    "\n",
-    "df = df.loc[:,~df.columns.duplicated()]\n",
-    "df = df.reset_index()\n",
-    "df = df.loc[df['minutes_90s'] > 10]\n",
-    "df['position'] = df['position'].str[:2]\n",
-    "\n",
-    "df['gls_value'] = round(df['goals'] * (1 + (df['goals'] / df['xg'])), 3)\n",
-    "df['gls_contributed'] = df['gls_value'] + df['xg_assist']\n",
-    "\n",
-    "df['gls_ast'] = df['goals'] + df['assists']\n",
-    "df['expected'] = df['xg'] + df['xg_assist']\n",
-    "\n",
-    "df['ga90'] = round(df['gls_ast'] / df['minutes_90s'], 2)\n",
-    "df['xga90'] = round(df['expected'] / df['minutes_90s'], 2)\n",
-    "df['gc90'] = round(df['gls_contributed'] / df['minutes_90s'], 2)\n",
-    "\n",
-    "df = df.sort_values(by = 'gls_contributed', ascending = False)\n",
-    "\n",
-    "df = df[['player_id', 'player', 'position', 'season', 'team', 'minutes_90s', 'points_per_game', 'ga90', 'xga90', 'gc90']]\n",
-    "\n",
-    "df = df.dropna()\n",
-    "    \n",
-    "positions = df['position'].unique().tolist()\n",
     "\n",
     "for pos in positions:\n",
     "\n",
@@ -527,7 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32e434aa",
+   "id": "868921c2",
    "metadata": {},
    "outputs": [],
    "source": []
